<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".kotlin.ui.fragments.CalBurnFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_20dp"

        android:text="@string/workouts"
        android:textColor="@color/purple_200"
        android:textSize="@dimen/dimen_18sp" />

    <Spinner
        android:id="@+id/spItems"
        style="@style/style_Spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/dimen_15dp"
        android:background="@drawable/edittext_bg"
        android:gravity="center" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dimen_20dp"

            android:text="@string/tv_time"
            android:textColor="@color/purple_200"
            android:textSize="@dimen/dimen_16sp" />

        <EditText
            android:id="@+id/et_time"
            android:layout_width="@dimen/dimen_150dp"
            android:layout_height="@dimen/dimen_40dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/dimen_20dp"
            android:background="@drawable/edittext_bg"

            android:gravity="center"
            android:hint="@string/hint_inmin"
            android:inputType="number"
            android:maxLength="3"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_16sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_20dp">

        <TextView
            android:id="@+id/distance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dimen_20dp"

            android:text="@string/tv_distance"
            android:textColor="@color/purple_200"
            android:textSize="@dimen/dimen_16sp" />

        <EditText
            android:id="@+id/et_distance"
            android:layout_width="@dimen/dimen_150dp"
            android:layout_height="@dimen/dimen_40dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/dimen_20dp"
            android:background="@drawable/edittext_bg"

            android:gravity="center"
            android:hint="@string/hint_inkm"
            android:inputType="number"
            android:maxLength="3"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_16sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_20dp">

        <TextView
            android:id="@+id/or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dimen_20dp"

            android:text="@string/or"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_1dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dimen_20dp"
            android:layout_marginRight="@dimen/dimen_20dp"
            android:layout_toRightOf="@+id/or"
            android:background="@color/tip_color" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dimen_20dp"

            android:text="@string/enter_cal"
            android:textColor="@color/purple_200"
            android:textSize="@dimen/dimen_16sp" />

        <EditText
            android:id="@+id/et_cal_entered"
            android:layout_width="@dimen/dimen_150dp"
            android:layout_height="@dimen/dimen_40dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/dimen_20dp"
            android:background="@drawable/edittext_bg"

            android:gravity="center"
            android:hint="@string/cal"
            android:inputType="number"
            android:maxLength="3"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_16sp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_cal_burned"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dimen_20dp"
            android:layout_marginTop="30dp"

            android:text=""
            android:textColor="@color/purple_200"
            android:textSize="@dimen/dimen_16sp" />

        <TextView
            android:id="@+id/tv_cal_burned_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dimen_20dp"
            android:layout_marginTop="@dimen/dimen_30dp"

            android:text=""
            android:textColor="@color/purple_200"
            android:textSize="@dimen/dimen_16sp" />
    </LinearLayout>


    <TextView
        android:id="@+id/tv_done"
        android:layout_width="@dimen/dimen_180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dimen_100dp"
        android:background="@drawable/button_bg"

        android:gravity="center"
        android:padding="@dimen/dimen_10dp"
        android:text="@string/done"
        android:textColor="@color/white" />


</LinearLayout>