<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/breakFastTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10dp"

        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:paddingEnd="10dp"
        android:paddingBottom="5dp"
        android:text="@string/breakfast"
        android:textColor="@color/purple_200"
        android:textSize="@dimen/heading"
        app:drawableEndCompat="@drawable/ic_add_24px" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="@dimen/dimen_10dp"
        android:background="@color/tip_color" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/morningSnackTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:paddingEnd="10dp"
        android:paddingBottom="5dp"
        android:text="@string/morning_snack"
        android:textColor="@color/purple_200"
        android:textSize="@dimen/heading"
        app:drawableEndCompat="@drawable/ic_add_24px" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="@dimen/dimen_10dp"
        android:background="@color/tip_color" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/lunchTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:paddingEnd="10dp"
        android:paddingBottom="5dp"
        android:text="@string/lunch"
        android:textColor="@color/purple_200"
        android:textSize="@dimen/heading"
        app:drawableEndCompat="@drawable/ic_add_24px" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="@dimen/dimen_10dp"
        android:background="@color/tip_color" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/eveningSnackTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:paddingEnd="10dp"
        android:paddingBottom="5dp"
        android:text="@string/evening_snack"
        android:textColor="@color/purple_200"
        android:textSize="@dimen/heading"
        app:drawableEndCompat="@drawable/ic_add_24px" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="@dimen/dimen_10dp"
        android:background="@color/tip_color" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/dinnerTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:paddingEnd="10dp"
        android:paddingBottom="5dp"
        android:text="@string/dinner"
        android:textColor="@color/purple_200"
        android:textSize="@dimen/heading"
        app:drawableEndCompat="@drawable/ic_add_24px" />
</LinearLayout>