<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/viewAddFoodParentLay"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/foodIMV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/food_img_desc"
        android:scaleType="centerCrop"
        android:layout_gravity="center"
        android:src="@drawable/ic_apple"
        android:layout_marginTop="@dimen/dimen_15dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_15dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10dp"

                android:text="@string/select_no_of_portion"
                android:textColor="@color/purple_200"
                android:textSize="@dimen/dimen_18sp" />

            <Spinner
                android:id="@+id/noOfPortionSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_20dp"

                android:text="@string/select_portion_type"
                android:textColor="@color/purple_200"
                android:textSize="@dimen/dimen_18sp" />

            <Spinner
                android:id="@+id/portionTypeSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/addCalorieCountBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dimen_40dp"
                android:background="@drawable/button_bg"

                android:paddingStart="@dimen/dimen_40dp"
                android:paddingEnd="@dimen/dimen_40dp"
                android:text="@string/add_food_and_exit"
                android:textColor="@color/white" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>